--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "demoproductapi",
+  "name": "auctionsapi",
   "version": "1.0.0",
-  "description": "product api",
+  "description": "digital auctions - backend api",
   "main": "server.js",
   "scripts": {
     "start": "node server"
   },
-  "author": "sai",
+  "author": "NetworkRedux Team",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "joi": "^13.1.2",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "uuid": "^8.3.2"
   }
 }
