--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "cors": "^2.8.5",
     "express": "^4.16.3",
     "joi": "^13.1.2",
     "redis": "^3.1.2",
+    "socket.io": "^4.0.2",
     "uuid": "^8.3.2"
   }
 }
